优化信息获取